Corrected a small bug in dataset preprocessing

--- a/Assignment03/seq2seq_without_Attention.ipynb
+++ b/Assignment03/seq2seq_without_Attention.ipynb
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KXMvklWP41yA",
-        "outputId": "97b7fa47-393c-4002-ead3-fd7dbe2298ba"
+        "outputId": "221e8995-cee9-436d-b69f-d4905453ba98"
       },
       "source": [
         "from google.colab import drive\n",
@@ -55,13 +55,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d4BZBkwtYydm"
+        "id": "d4BZBkwtYydm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f708c120-1be3-4b1f-b1c4-3f5eeaadb05e"
       },
       "source": [
         "!unzip '/content/drive/MyDrive/lexicons.zip'"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Archive:  /content/drive/MyDrive/lexicons.zip\n",
+            "   creating: lexicons/\n",
+            "  inflating: lexicons/ta.translit.sampled.test.tsv  \n",
+            "  inflating: lexicons/ta.translit.sampled.dev.tsv  \n",
+            "  inflating: lexicons/ta.translit.sampled.train.tsv  \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -100,7 +116,7 @@
           "height": 402
         },
         "id": "-icrnCDBdyn8",
-        "outputId": "eaf2d40d-303c-4cd9-8f38-fae91eec0ad7"
+        "outputId": "69a1a059-5a53-4bb4-e9f4-758d1919dc3a"
       },
       "source": [
         "train_df"
@@ -226,7 +242,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -238,7 +254,7 @@
           "height": 402
         },
         "id": "D_sUDPUSXsc2",
-        "outputId": "20020b2e-6cb0-4008-a180-6ffee16a7866"
+        "outputId": "91f55002-dad5-4f4d-f412-22ae2b7ef21e"
       },
       "source": [
         "val_df"
@@ -364,7 +380,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -375,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xenfuPMts4c",
-        "outputId": "2d35823e-11c6-4585-ceb1-e5abb77d3de9"
+        "outputId": "c3ade991-99da-4ee9-9a58-b9d80ee3d36f"
       },
       "source": [
         "# Vectorize the data.\n",
@@ -393,10 +409,19 @@
         "        if char not in target_characters:\n",
         "            target_characters.add(char)\n",
         "\n",
+        "input_token_index = dict([(char, i) for i, char in enumerate(input_characters)])\n",
+        "target_token_index = dict([(char, i) for i, char in enumerate(target_characters)])\n",
+        "\n",
+        "if ' ' not in input_token_index:\n",
+        "  input_token_index[' '] = len(input_token_index)\n",
+        "\n",
+        "if ' ' not in target_token_index:\n",
+        "  target_token_index[' '] = len(target_token_index)\n",
+        "\n",
         "input_characters = sorted(list(input_characters))\n",
         "target_characters = sorted(list(target_characters))\n",
-        "num_encoder_tokens = len(input_characters)\n",
-        "num_decoder_tokens = len(target_characters)\n",
+        "num_encoder_tokens = len(input_characters) + 1\n",
+        "num_decoder_tokens = len(target_characters) + 1\n",
         "max_encoder_seq_length = max([len(txt) for txt in input_texts])\n",
         "max_decoder_seq_length = max([len(txt) for txt in target_texts])\n",
         "\n",
@@ -405,9 +430,6 @@
         "print(\"Number of unique output tokens:\", num_decoder_tokens)\n",
         "print(\"Max sequence length for inputs:\", max_encoder_seq_length)\n",
         "print(\"Max sequence length for outputs:\", max_decoder_seq_length)\n",
-        "\n",
-        "input_token_index = dict([(char, i) for i, char in enumerate(input_characters)])\n",
-        "target_token_index = dict([(char, i) for i, char in enumerate(target_characters)])\n",
         "\n",
         "encoder_input_data = np.zeros(\n",
         "    (len(input_texts), max_encoder_seq_length, num_encoder_tokens), dtype=\"float32\"\n",
@@ -422,13 +444,16 @@
         "for i, (input_text, target_text) in enumerate(zip(input_texts, target_texts)):\n",
         "    for t, char in enumerate(input_text):\n",
         "        encoder_input_data[i, t, input_token_index[char]] = 1.0\n",
+        "    encoder_input_data[i, t + 1 :, input_token_index[\" \"]] = 1.0\n",
         "    for t, char in enumerate(target_text):\n",
         "        # decoder_target_data is ahead of decoder_input_data by one timestep\n",
         "        decoder_input_data[i, t, target_token_index[char]] = 1.0\n",
         "        if t > 0:\n",
         "            # decoder_target_data will be ahead by one timestep\n",
         "            # and will not include the start character.\n",
-        "            decoder_target_data[i, t - 1, target_token_index[char]] = 1.0"
+        "            decoder_target_data[i, t - 1, target_token_index[char]] = 1.0\n",
+        "    decoder_input_data[i, t + 1 :, target_token_index[\" \"]] = 1.0\n",
+        "    decoder_target_data[i, t:, target_token_index[\" \"]] = 1.0"
       ],
       "execution_count": null,
       "outputs": [
@@ -436,8 +461,8 @@
           "output_type": "stream",
           "text": [
             "Number of samples: 68215\n",
-            "Number of unique input tokens: 26\n",
-            "Number of unique output tokens: 46\n",
+            "Number of unique input tokens: 27\n",
+            "Number of unique output tokens: 47\n",
             "Max sequence length for inputs: 30\n",
             "Max sequence length for outputs: 26\n"
           ],
@@ -472,13 +497,16 @@
         "for i, (input_text, target_text) in enumerate(zip(val_input_texts, val_target_texts)):\n",
         "    for t, char in enumerate(val_input_text):\n",
         "        val_encoder_input_data[i, t, input_token_index[char]] = 1.0\n",
+        "    encoder_input_data[i, t + 1 :, input_token_index[\" \"]] = 1.0\n",
         "    for t, char in enumerate(val_target_text):\n",
         "        # decoder_target_data is ahead of decoder_input_data by one timestep\n",
         "        val_decoder_input_data[i, t, target_token_index[char]] = 1.0\n",
         "        if t > 0:\n",
         "            # decoder_target_data will be ahead by one timestep\n",
         "            # and will not include the start character.\n",
-        "            val_decoder_target_data[i, t - 1, target_token_index[char]] = 1.0"
+        "            val_decoder_target_data[i, t - 1, target_token_index[char]] = 1.0\n",
+        "    decoder_input_data[i, t + 1 :, target_token_index[\" \"]] = 1.0\n",
+        "    decoder_target_data[i, t:, target_token_index[\" \"]] = 1.0"
       ],
       "execution_count": null,
       "outputs": []
@@ -492,9 +520,11 @@
         "latent_dim = 256\n",
         "\n",
         "# Define an input sequence and process it.\n",
-        "encoder_inputs = keras.Input(shape=(None, num_encoder_tokens))\n",
-        "encoder = keras.layers.LSTM(latent_dim, return_state=True)\n",
-        "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\n",
+        "encoder_inputs = keras.Input(shape=(None, num_encoder_tokens,))\n",
+        "#encoder_embedding = keras.layers.Embedding(len(input_texts), 64)(encoder_inputs)\n",
+        "encoder = keras.layers.LSTM(latent_dim, return_sequences=True,return_state = True) (encoder_inputs)\n",
+        "encoder = keras.layers.LSTM(latent_dim, return_sequences=True,return_state = True) (encoder)\n",
+        "encoder_outputs, state_h, state_c = encoder\n",
         "\n",
         "# We discard `encoder_outputs` and only keep the states.\n",
         "encoder_states = [state_h, state_c]\n",
@@ -505,14 +535,15 @@
         "# We set up our decoder to return full output sequences,\n",
         "# and to return internal states as well. We don't use the\n",
         "# return states in the training model, but we will use them in inference.\n",
-        "decoder_lstm = keras.layers.LSTM(latent_dim, return_sequences=True, return_state=True)\n",
-        "decoder_outputs, _, _ = decoder_lstm(decoder_inputs, initial_state=encoder_states)\n",
+        "decoder_lstm = keras.layers.LSTM(latent_dim,return_sequences=True, return_state=True)(decoder_inputs,initial_state=encoder_states)\n",
+        "decoder_lstm = keras.layers.LSTM(latent_dim, return_sequences=True, return_state=True) (decoder_lstm )\n",
+        "decoder_outputs, _, _ = decoder_lstm\n",
         "decoder_dense = keras.layers.Dense(num_decoder_tokens, activation=\"softmax\")\n",
         "decoder_outputs = decoder_dense(decoder_outputs)\n",
         "\n",
         "# Define the model that will turn\n",
         "# `encoder_input_data` & `decoder_input_data` into `decoder_target_data`\n",
-        "model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)\n"
+        "model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)"
       ],
       "execution_count": null,
       "outputs": []
@@ -520,37 +551,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "u82k-7SHxHbq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "DeM68FmVzKPf",
-        "outputId": "00f773ab-2e7c-4c67-da78-832faa6423ee"
+        "outputId": "ce0609ff-084a-4ccb-d76c-72cf2303ca24"
       },
       "source": [
-        "print(len(val_input_texts))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "6827\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "u82k-7SHxHbq"
-      },
-      "source": [
-        "batch_size = 64  # Batch size for training.\n",
-        "epochs = 100  # Number of epochs to train for.\n",
+        "batch_size = 1024  # Batch size for training.\n",
+        "epochs = 10 # Number of epochs to train for.\n",
         "\n",
         "model.compile(\n",
-        "    optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+        "    optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
         ")\n",
         "model.fit(\n",
         "    [encoder_input_data, decoder_input_data],\n",
@@ -562,6 +574,66 @@
         ")\n",
         "# Save model\n",
         "model.save(\"s2s\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "67/67 [==============================] - 17s 180ms/step - loss: 1.7234 - accuracy: 0.6621 - val_loss: 1.0185 - val_accuracy: 0.7329\n",
+            "Epoch 2/10\n",
+            "67/67 [==============================] - 11s 166ms/step - loss: 1.0039 - accuracy: 0.7346 - val_loss: 0.9753 - val_accuracy: 0.7364\n",
+            "Epoch 3/10\n",
+            "67/67 [==============================] - 11s 162ms/step - loss: 0.9727 - accuracy: 0.7365 - val_loss: 0.9559 - val_accuracy: 0.7373\n",
+            "Epoch 4/10\n",
+            "67/67 [==============================] - 11s 158ms/step - loss: 0.9538 - accuracy: 0.7396 - val_loss: 0.9133 - val_accuracy: 0.7576\n",
+            "Epoch 5/10\n",
+            "67/67 [==============================] - 10s 156ms/step - loss: 0.8893 - accuracy: 0.7625 - val_loss: 0.8111 - val_accuracy: 0.7775\n",
+            "Epoch 6/10\n",
+            "67/67 [==============================] - 10s 156ms/step - loss: 0.7862 - accuracy: 0.7840 - val_loss: 0.7298 - val_accuracy: 0.7990\n",
+            "Epoch 7/10\n",
+            "67/67 [==============================] - 10s 156ms/step - loss: 0.7267 - accuracy: 0.7982 - val_loss: 0.6851 - val_accuracy: 0.8091\n",
+            "Epoch 8/10\n",
+            "67/67 [==============================] - 10s 157ms/step - loss: 0.6709 - accuracy: 0.8137 - val_loss: 0.7688 - val_accuracy: 0.7860\n",
+            "Epoch 9/10\n",
+            "67/67 [==============================] - 11s 159ms/step - loss: 0.6663 - accuracy: 0.8174 - val_loss: 0.5771 - val_accuracy: 0.8432\n",
+            "Epoch 10/10\n",
+            "67/67 [==============================] - 11s 160ms/step - loss: 0.5688 - accuracy: 0.8453 - val_loss: 0.5103 - val_accuracy: 0.8637\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:absl:Found untraced functions such as lstm_cell_4_layer_call_and_return_conditional_losses, lstm_cell_4_layer_call_fn, lstm_cell_5_layer_call_and_return_conditional_losses, lstm_cell_5_layer_call_fn, lstm_cell_6_layer_call_and_return_conditional_losses while saving (showing 5 of 20). These functions will not be directly callable after loading.\n",
+            "WARNING:absl:Found untraced functions such as lstm_cell_4_layer_call_and_return_conditional_losses, lstm_cell_4_layer_call_fn, lstm_cell_5_layer_call_and_return_conditional_losses, lstm_cell_5_layer_call_fn, lstm_cell_6_layer_call_and_return_conditional_losses while saving (showing 5 of 20). These functions will not be directly callable after loading.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: s2s/assets\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: s2s/assets\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RJuFegymDpLG"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
