Added embedding layer

--- a/Assignment03/seq2seq_without_Attention.ipynb
+++ b/Assignment03/seq2seq_without_Attention.ipynb
@@ -35,13 +35,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KXMvklWP41yA",
-        "outputId": "221e8995-cee9-436d-b69f-d4905453ba98"
+        "outputId": "6005a5dd-c373-486c-f7da-575ef3793ebc"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,12 +59,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f708c120-1be3-4b1f-b1c4-3f5eeaadb05e"
+        "outputId": "0432790d-d8fc-4d15-d494-494e648f47a4"
       },
       "source": [
         "!unzip '/content/drive/MyDrive/lexicons.zip'"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
         "from tensorflow import keras\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "val_df = pd.read_csv(\"/content/lexicons/ta.translit.sampled.dev.tsv\", sep = '\\t', header = None)\n",
         "val_df = val_df.dropna(axis=0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -116,12 +116,12 @@
           "height": 402
         },
         "id": "-icrnCDBdyn8",
-        "outputId": "69a1a059-5a53-4bb4-e9f4-758d1919dc3a"
+        "outputId": "4654be00-0eb3-4a0e-a1f5-805b3d670d8c"
       },
       "source": [
         "train_df"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,12 +254,12 @@
           "height": 402
         },
         "id": "D_sUDPUSXsc2",
-        "outputId": "91f55002-dad5-4f4d-f412-22ae2b7ef21e"
+        "outputId": "da663d8b-f0ea-44eb-b0b1-938551011c1a"
       },
       "source": [
         "val_df"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xenfuPMts4c",
-        "outputId": "c3ade991-99da-4ee9-9a58-b9d80ee3d36f"
+        "outputId": "94a8f027-46ee-4443-bfbc-7760ff59d13d"
       },
       "source": [
         "# Vectorize the data.\n",
@@ -432,10 +432,10 @@
         "print(\"Max sequence length for outputs:\", max_decoder_seq_length)\n",
         "\n",
         "encoder_input_data = np.zeros(\n",
-        "    (len(input_texts), max_encoder_seq_length, num_encoder_tokens), dtype=\"float32\"\n",
+        "    (len(input_texts), max_encoder_seq_length), dtype=\"float32\"\n",
         ")\n",
         "decoder_input_data = np.zeros(\n",
-        "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens), dtype=\"float32\"\n",
+        "    (len(input_texts), max_decoder_seq_length), dtype=\"float32\"\n",
         ")\n",
         "decoder_target_data = np.zeros(\n",
         "    (len(input_texts), max_decoder_seq_length, num_decoder_tokens), dtype=\"float32\"\n",
@@ -443,19 +443,19 @@
         "\n",
         "for i, (input_text, target_text) in enumerate(zip(input_texts, target_texts)):\n",
         "    for t, char in enumerate(input_text):\n",
-        "        encoder_input_data[i, t, input_token_index[char]] = 1.0\n",
-        "    encoder_input_data[i, t + 1 :, input_token_index[\" \"]] = 1.0\n",
+        "        encoder_input_data[i, t] = input_token_index[char]\n",
+        "    encoder_input_data[i, t + 1 :] = input_token_index[\" \"]\n",
         "    for t, char in enumerate(target_text):\n",
         "        # decoder_target_data is ahead of decoder_input_data by one timestep\n",
-        "        decoder_input_data[i, t, target_token_index[char]] = 1.0\n",
+        "        decoder_input_data[i, t] = target_token_index[char]\n",
         "        if t > 0:\n",
         "            # decoder_target_data will be ahead by one timestep\n",
         "            # and will not include the start character.\n",
         "            decoder_target_data[i, t - 1, target_token_index[char]] = 1.0\n",
-        "    decoder_input_data[i, t + 1 :, target_token_index[\" \"]] = 1.0\n",
+        "    decoder_input_data[i, t + 1 :] = target_token_index[\" \"]\n",
         "    decoder_target_data[i, t:, target_token_index[\" \"]] = 1.0"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,10 +485,10 @@
         "    val_target_texts.append(val_target_text)\n",
         "\n",
         "val_encoder_input_data = np.zeros(\n",
-        "    (len(val_input_texts), max_encoder_seq_length, num_encoder_tokens), dtype=\"float32\"\n",
+        "    (len(val_input_texts), max_encoder_seq_length), dtype=\"float32\"\n",
         ")\n",
         "val_decoder_input_data = np.zeros(\n",
-        "    (len(val_input_texts), max_decoder_seq_length, num_decoder_tokens), dtype=\"float32\"\n",
+        "    (len(val_input_texts), max_decoder_seq_length), dtype=\"float32\"\n",
         ")\n",
         "val_decoder_target_data = np.zeros(\n",
         "    (len(val_input_texts), max_decoder_seq_length, num_decoder_tokens), dtype=\"float32\"\n",
@@ -496,19 +496,19 @@
         "\n",
         "for i, (input_text, target_text) in enumerate(zip(val_input_texts, val_target_texts)):\n",
         "    for t, char in enumerate(val_input_text):\n",
-        "        val_encoder_input_data[i, t, input_token_index[char]] = 1.0\n",
-        "    encoder_input_data[i, t + 1 :, input_token_index[\" \"]] = 1.0\n",
+        "        val_encoder_input_data[i, t] = input_token_index[char]\n",
+        "    encoder_input_data[i, t + 1 :] = input_token_index[\" \"]\n",
         "    for t, char in enumerate(val_target_text):\n",
         "        # decoder_target_data is ahead of decoder_input_data by one timestep\n",
-        "        val_decoder_input_data[i, t, target_token_index[char]] = 1.0\n",
+        "        val_decoder_input_data[i, t] = target_token_index[char]\n",
         "        if t > 0:\n",
         "            # decoder_target_data will be ahead by one timestep\n",
         "            # and will not include the start character.\n",
         "            val_decoder_target_data[i, t - 1, target_token_index[char]] = 1.0\n",
-        "    decoder_input_data[i, t + 1 :, target_token_index[\" \"]] = 1.0\n",
+        "    decoder_input_data[i, t + 1 :] = target_token_index[\" \"]\n",
         "    decoder_target_data[i, t:, target_token_index[\" \"]] = 1.0"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -517,35 +517,32 @@
         "id": "E8iqmjxcw9v9"
       },
       "source": [
-        "latent_dim = 256\n",
+        "embedding_size = 256\n",
+        "hidden_size = 32\n",
         "\n",
         "# Define an input sequence and process it.\n",
-        "encoder_inputs = keras.Input(shape=(None, num_encoder_tokens,))\n",
-        "#encoder_embedding = keras.layers.Embedding(len(input_texts), 64)(encoder_inputs)\n",
-        "encoder = keras.layers.LSTM(latent_dim, return_sequences=True,return_state = True) (encoder_inputs)\n",
-        "encoder = keras.layers.LSTM(latent_dim, return_sequences=True,return_state = True) (encoder)\n",
-        "encoder_outputs, state_h, state_c = encoder\n",
-        "\n",
-        "# We discard `encoder_outputs` and only keep the states.\n",
-        "encoder_states = [state_h, state_c]\n",
+        "encoder_inputs = keras.layers.Input(shape=(None,), name=\"input_1\")\n",
+        "embedding = keras.layers.Embedding(num_encoder_tokens, embedding_size, name=\"embedding_1\")(encoder_inputs)\n",
+        "encoder_seq, *encoder_state = keras.layers.LSTM(hidden_size, return_sequences=True,return_state = True, name=\"encoder_1\") (embedding)\n",
+        "encoder_seq, *encoder_state = keras.layers.LSTM(hidden_size, return_sequences=True,return_state = True, name=\"encoder_2\") (encoder_seq)\n",
         "\n",
         "# Set up the decoder, using `encoder_states` as initial state.\n",
-        "decoder_inputs = keras.Input(shape=(None, num_decoder_tokens))\n",
+        "decoder_inputs = keras.Input(shape=(None,), name=\"input_2\")\n",
+        "decoder_embedding = keras.layers.Embedding(num_decoder_tokens, embedding_size, name=\"embedding_2\")(decoder_inputs)\n",
         "\n",
         "# We set up our decoder to return full output sequences,\n",
         "# and to return internal states as well. We don't use the\n",
         "# return states in the training model, but we will use them in inference.\n",
-        "decoder_lstm = keras.layers.LSTM(latent_dim,return_sequences=True, return_state=True)(decoder_inputs,initial_state=encoder_states)\n",
-        "decoder_lstm = keras.layers.LSTM(latent_dim, return_sequences=True, return_state=True) (decoder_lstm )\n",
-        "decoder_outputs, _, _ = decoder_lstm\n",
-        "decoder_dense = keras.layers.Dense(num_decoder_tokens, activation=\"softmax\")\n",
-        "decoder_outputs = decoder_dense(decoder_outputs)\n",
+        "decoder_seq, *_ = keras.layers.LSTM(hidden_size,return_sequences=True, return_state=True, name=\"decoder_1\")(decoder_embedding,initial_state=encoder_state)\n",
+        "decoder_seq, *_ = keras.layers.LSTM(hidden_size, return_sequences=True, return_state=True, name=\"decoder_2\") (decoder_seq)\n",
+        "\n",
+        "decoder_outputs = keras.layers.Dense(num_decoder_tokens, activation=\"softmax\", name=\"dense_1\")(decoder_seq)\n",
         "\n",
         "# Define the model that will turn\n",
         "# `encoder_input_data` & `decoder_input_data` into `decoder_target_data`\n",
         "model = keras.Model([encoder_inputs, decoder_inputs], decoder_outputs)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -555,10 +552,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce0609ff-084a-4ccb-d76c-72cf2303ca24"
+        "outputId": "2be0c9b2-d02c-422e-d2c4-6e433f1b3911"
       },
       "source": [
-        "batch_size = 1024  # Batch size for training.\n",
+        "batch_size = 512  # Batch size for training.\n",
         "epochs = 10 # Number of epochs to train for.\n",
         "\n",
         "model.compile(\n",
@@ -575,39 +572,39 @@
         "# Save model\n",
         "model.save(\"s2s\")"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "67/67 [==============================] - 17s 180ms/step - loss: 1.7234 - accuracy: 0.6621 - val_loss: 1.0185 - val_accuracy: 0.7329\n",
+            "134/134 [==============================] - 48s 102ms/step - loss: 2.2639 - accuracy: 0.6741 - val_loss: 1.1099 - val_accuracy: 0.7194\n",
             "Epoch 2/10\n",
-            "67/67 [==============================] - 11s 166ms/step - loss: 1.0039 - accuracy: 0.7346 - val_loss: 0.9753 - val_accuracy: 0.7364\n",
+            "134/134 [==============================] - 12s 90ms/step - loss: 1.0820 - accuracy: 0.7231 - val_loss: 1.0084 - val_accuracy: 0.7363\n",
             "Epoch 3/10\n",
-            "67/67 [==============================] - 11s 162ms/step - loss: 0.9727 - accuracy: 0.7365 - val_loss: 0.9559 - val_accuracy: 0.7373\n",
+            "134/134 [==============================] - 12s 89ms/step - loss: 0.9834 - accuracy: 0.7464 - val_loss: 0.9077 - val_accuracy: 0.7624\n",
             "Epoch 4/10\n",
-            "67/67 [==============================] - 11s 158ms/step - loss: 0.9538 - accuracy: 0.7396 - val_loss: 0.9133 - val_accuracy: 0.7576\n",
+            "134/134 [==============================] - 12s 90ms/step - loss: 0.8907 - accuracy: 0.7644 - val_loss: 0.8525 - val_accuracy: 0.7700\n",
             "Epoch 5/10\n",
-            "67/67 [==============================] - 10s 156ms/step - loss: 0.8893 - accuracy: 0.7625 - val_loss: 0.8111 - val_accuracy: 0.7775\n",
+            "134/134 [==============================] - 12s 90ms/step - loss: 0.8454 - accuracy: 0.7722 - val_loss: 0.8217 - val_accuracy: 0.7768\n",
             "Epoch 6/10\n",
-            "67/67 [==============================] - 10s 156ms/step - loss: 0.7862 - accuracy: 0.7840 - val_loss: 0.7298 - val_accuracy: 0.7990\n",
+            "134/134 [==============================] - 12s 90ms/step - loss: 0.8172 - accuracy: 0.7769 - val_loss: 0.8017 - val_accuracy: 0.7778\n",
             "Epoch 7/10\n",
-            "67/67 [==============================] - 10s 156ms/step - loss: 0.7267 - accuracy: 0.7982 - val_loss: 0.6851 - val_accuracy: 0.8091\n",
+            "134/134 [==============================] - 12s 91ms/step - loss: 0.7925 - accuracy: 0.7799 - val_loss: 0.7817 - val_accuracy: 0.7818\n",
             "Epoch 8/10\n",
-            "67/67 [==============================] - 10s 157ms/step - loss: 0.6709 - accuracy: 0.8137 - val_loss: 0.7688 - val_accuracy: 0.7860\n",
+            "134/134 [==============================] - 12s 91ms/step - loss: 0.7770 - accuracy: 0.7821 - val_loss: 0.7654 - val_accuracy: 0.7838\n",
             "Epoch 9/10\n",
-            "67/67 [==============================] - 11s 159ms/step - loss: 0.6663 - accuracy: 0.8174 - val_loss: 0.5771 - val_accuracy: 0.8432\n",
+            "134/134 [==============================] - 12s 89ms/step - loss: 0.7622 - accuracy: 0.7858 - val_loss: 0.7541 - val_accuracy: 0.7895\n",
             "Epoch 10/10\n",
-            "67/67 [==============================] - 11s 160ms/step - loss: 0.5688 - accuracy: 0.8453 - val_loss: 0.5103 - val_accuracy: 0.8637\n"
+            "134/134 [==============================] - 12s 89ms/step - loss: 0.7518 - accuracy: 0.7908 - val_loss: 0.7437 - val_accuracy: 0.7955\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "WARNING:absl:Found untraced functions such as lstm_cell_4_layer_call_and_return_conditional_losses, lstm_cell_4_layer_call_fn, lstm_cell_5_layer_call_and_return_conditional_losses, lstm_cell_5_layer_call_fn, lstm_cell_6_layer_call_and_return_conditional_losses while saving (showing 5 of 20). These functions will not be directly callable after loading.\n",
-            "WARNING:absl:Found untraced functions such as lstm_cell_4_layer_call_and_return_conditional_losses, lstm_cell_4_layer_call_fn, lstm_cell_5_layer_call_and_return_conditional_losses, lstm_cell_5_layer_call_fn, lstm_cell_6_layer_call_and_return_conditional_losses while saving (showing 5 of 20). These functions will not be directly callable after loading.\n"
+            "WARNING:absl:Found untraced functions such as lstm_cell_19_layer_call_fn, lstm_cell_19_layer_call_and_return_conditional_losses, lstm_cell_20_layer_call_fn, lstm_cell_20_layer_call_and_return_conditional_losses, lstm_cell_21_layer_call_fn while saving (showing 5 of 20). These functions will not be directly callable after loading.\n",
+            "WARNING:absl:Found untraced functions such as lstm_cell_19_layer_call_fn, lstm_cell_19_layer_call_and_return_conditional_losses, lstm_cell_20_layer_call_fn, lstm_cell_20_layer_call_and_return_conditional_losses, lstm_cell_21_layer_call_fn while saving (showing 5 of 20). These functions will not be directly callable after loading.\n"
           ],
           "name": "stderr"
         },
@@ -630,7 +627,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RJuFegymDpLG"
+        "id": "BrIp8f72Kj8f"
       },
       "source": [
         ""
